# warehouse-inventory-env

./: Dockerfile  LICENSE  README.md  app.py  environment.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  tasks.py  test_api.py
server/: app.py
