[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "warehouse-inventory-env"
version = "0.1.0"
description = "A real-world warehouse inventory management environment designed for agent training and evaluation with OpenEnv-style APIs"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Manaswini Patil"}]
keywords = ["warehouse", "inventory", "environment", "rl", "agent", "openenv"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "numpy>=1.21.0",
    "gymnasium>=0.29.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "python-multipart>=0.0.6",
    "openai>=1.0.0",
    "httpx>=0.25.0",
    "requests>=2.31.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/manaswinipatil/warehouse-inventory-env"
Repository = "https://github.com/manaswinipatil/warehouse-inventory-env.git"
Documentation = "https://huggingface.co/spaces/Manaswinipatil/warehouse-inventory-env"

[tool.setuptools]
packages = ["server"]
py-modules = ["environment", "inference", "models", "tasks"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 100
